tests/algorithms/transpiler/FS/strings/barcode_validator.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/strings/barcode_validator.fs(101,63): error FS0001: The type 'int64' does not match the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/strings/barcode_validator.fs(110,112): error FS0001: The type 'int' does not match the type 'int64'
